k8s/network-policies/allow-backend-same-namespace-only.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-same-namespace-only
  namespace: network-demo
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: network-demo
          podSelector:
            matchLabels:
              app: frontend
      ports:
        - protocol: TCP
          port: 80
