k8s/network-policies/deny-all-database.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-database
  namespace: network-demo
spec:
  podSelector:
    matchLabels:
      app: database
  policyTypes:
    - Ingress
