k8s/network-policies/frontend-egress-restricted.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fronted-egress-restricted
  namespace: network-demo
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
    - to:
       - podSelector:
           matchLabels:
             app: backend
    - ports:
        - protocol: TCP
          port: 80
